--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -124,7 +124,7 @@
 	      </a>
 	    </div>
 	    <div class="col-sm-6 col-lg-4 mb-4">
-	      <a href="">
+	      <a href="/events">
 	      	<div class="card text-bg-primary text-center p-3">
 		        <div class="card-body">
 		          <h5 class="card-title"><i class="fas fa-bullhorn"></i> Gestion évenéments</h5>
