--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -18,7 +18,7 @@
 	  			<a class="btn btn-success" href="/">
 					<i class="fa fa-home"></i> Accueil
 				</a>
-				<a class="btn btn-primary" href="/users/">
+				<a class="btn btn-primary" href="/events/">
 					<i class="fa fa-eye"></i> list of Events
 				</a>
 	  			<form method="post" th:object="${eventDto}">
