--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head><script src="/docs/5.3/assets/js/color-modes.js"></script>
+  <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -142,7 +142,7 @@
 	      </a>
 	    </div>
 	    <div class="col-sm-6 col-lg-4 mb-4">
-	      <a href="">
+	      <a href="/users_events/outings">
 	      	<div class="card text-bg-primary text-center p-3">
 		        <div class="card-body">
 		          <h5 class="card-title"><i class="fa fa-arrow-left"></i> Sorties</h5>
@@ -151,7 +151,7 @@
 	      </a>
 	    </div>
 	    <div class="col-sm-6 col-lg-4 mb-4">
-	      <a href="">
+	      <a href="/users_events">
 	      	<div class="card text-bg-primary text-center p-3">
 		        <div class="card-body">
 		          <h5 class="card-title"><i class="fa fa-arrow-right"></i> Entrées</h5>
