--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -81,7 +81,7 @@
 		  		<td th:text="${user.number}"></td>
 		  		<td th:text="${user.email}"></td>
 		  		<td th:text="${user.address}"></td>
-		  		<td th:text="${user.createdAt}"></td>
+		  		<td th:text="${user.createdAtUser}"></td>
 		  		<td style="white-space:nowrap">
 		  			<a class="btn btn-primary btn-sm" th:href="@{/users/edit(id=${user.id})}">
 		  				<i class="fa fa-edit"></i>
