--- a/src/main/resources/templates/users_events/outings.html
+++ b/src/main/resources/templates/users_events/outings.html
@@ -1,14 +1,26 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="en" data-bs-theme="auto">
+  <head><script src="/docs/5.3/assets/js/color-modes.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Secure PaymentManagement</title>
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.122.0">
+    <title>Masonry example · Bootstrap v5.3</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/masonry/">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  	<!-- Favicons -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
-  	integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
-  	crossorigin="anonymous" referrerpolicy="no-referrer" />	
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+
+	<link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	
+    <!-- Favicons -->
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />	
+	
   </head>
   <body>
    <style>
@@ -54,12 +66,12 @@
    </style>
    
   	<div class="container mt-5">
-  	<h1 class="text-center mb-4">List of events</h1>
+  	<h1 class="text-center mb-4">List of Outings</h1>
     <a class="btn btn-success" href="/">
 		<i class="fa fa-home"></i> Accueil
 	</a>
-	<a class="btn btn-primary" href="/events/create">
-		<i class="fa fa-add"></i> Add Event
+	<a class="btn btn-primary" href="/users_events/create_outings">
+		<i class="fa fa-add"></i> Add Outings
 	</a>
 	
     <div class="table-responsive small">
@@ -67,26 +79,31 @@
 		  <thead class="table-dark">
 		    <tr>
 		      <th scope="col">ID</th>
+		      <th scope="col">FullName</th>
 		      <th scope="col">Events</th>
 		      <th scope="col">Mountant</th>
-		      <th scope="col">CreatedAt</th>
-		      <th scope="col">Actions</th>
+		      <th scope="col">Months</th>
+		      <th scope="col">Deposit</th>
+		      <th scope="col">Date</th>
+		      <th scope="col">Factures</th>
 		    </tr>
 		  </thead>
 		  <tbody>
-		  	<tr th:each="event : ${events}">
-		  		<td th:text="${event.idEvent}"></td>
-		  		<td th:text="${event.libelleEvent}"></td>
-		  		<td th:text="${event.mountant}"></td>
-		  		<td th:text="${event.createdAt}"></td>
-		  		<td style="white-space:nowrap">
-		  			<a class="btn btn-primary btn-sm" th:href="@{/events/edit(id=${event.idEvent})}">
+		  	<tr th:each="xs : ${usersEvents}">
+		  		<td th:text="${xs[0]}"></td>
+		  		<td th:text="${xs[18]}"></td>
+		  		<td th:text="${xs[12]}"></td>
+		  		<td th:text="${'-'+xs[5]}" style="color:red; font-weight:bold"></td>
+		  		<td th:text="${xs[2]}"></td>
+		  		<td th:text="${xs[6]}"></td>
+		  		<td th:text="${xs[4]}"></td>
+		  		<td>
+		  			<a class="btn btn-default btn-sm" th:href="@{/users_events/invoice(id=${xs[0]})}">
+		  				<i class="fa fa-upload"></i>
+		  			</a>
+		  			<a class="btn btn-primary btn-sm" th:href="@{/users_events/edit_outings(id=${xs[0]})}">
 		  				<i class="fa fa-edit"></i>
 		  			</a>
-			      	<a class="btn btn-danger btn-sm" th:href="@{/events/delete(id=${event.idEvent})}"
-			      	onclick="return confirm('Are you sure?')">
-			      		<i class="fa fa-trash"></i>
-			      	</a>
 		  		</td>
 		  	</tr>
 		  </tbody>
