--- a/src/main/resources/templates/users_events/create.html
+++ b/src/main/resources/templates/users_events/create.html
@@ -71,7 +71,7 @@
 							  </label>
 							</div>
 							<div class="form-check">
-							<input class="form-check-input" type="radio" name="noStatutDeposit" id="noStatutDeposit"
+							<input class="form-check-input" type="radio" name="statutDeposit" 
 							   value="0">
 							  <label class="form-check-label" for="flexRadioDefault2">
 							    Non
