--- a/src/main/resources/templates/users_events/create_outings.html
+++ b/src/main/resources/templates/users_events/create_outings.html
@@ -12,6 +12,13 @@
   </head>
   <body>
 	  <div class="container">
+	  <div th:if="${success}"
+    		class="alert alert-success alert-dismissible fade show my-5" role="alert">
+  			<strong>Le solde est vide. Veuillez contacter le </strong>
+  			<a class="ms-2" href="/">Support technique</a>
+  			<button type="button" class="btn-close" data-bs-dismiss="alert"
+  			aria-label="close"></button>
+  		</div>
 	  	<div class="row">
 	  		<div class="col-md-8 mx-auto rounded border p-4 m-4">
 	  			<h2 class="text-center mb-5">Outings</h2>
